Update MediaRepository.java